// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge component Badge snapshot test should render correctly for a blue badge 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "alignSelf": "center",
        "borderRadius": 50,
        "height": 24,
        "justifyContent": "center",
        "minWidth": 24,
        "paddingHorizontal": 8,
      },
      Object {
        "backgroundColor": "#152560",
      },
      undefined,
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#04142F",
          "fontFamily": "Roboto-Medium",
          "fontSize": 14,
          "letterSpacing": 0.16,
          "lineHeight": 22,
        },
        Object {
          "color": "white",
        },
        undefined,
      ]
    }
  >
    5
  </Text>
</View>
`;

exports[`Badge component Badge snapshot test should render correctly for a grey badge 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "alignSelf": "center",
        "borderRadius": 50,
        "height": 24,
        "justifyContent": "center",
        "minWidth": 24,
        "paddingHorizontal": 8,
      },
      Object {
        "backgroundColor": "#E7ECEF",
      },
      undefined,
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#04142F",
          "fontFamily": "Roboto-Medium",
          "fontSize": 14,
          "letterSpacing": 0.16,
          "lineHeight": 22,
        },
        Object {
          "color": "#8A94A6",
        },
        undefined,
      ]
    }
  >
    5
  </Text>
</View>
`;

exports[`Badge component Badge snapshot test should render correctly passing number 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "alignSelf": "center",
        "borderRadius": 50,
        "height": 24,
        "justifyContent": "center",
        "minWidth": 24,
        "paddingHorizontal": 8,
      },
      Object {
        "backgroundColor": "#E7ECEF",
      },
      undefined,
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#04142F",
          "fontFamily": "Roboto-Medium",
          "fontSize": 14,
          "letterSpacing": 0.16,
          "lineHeight": 22,
        },
        Object {
          "color": "#8A94A6",
        },
        undefined,
      ]
    }
  >
    5
  </Text>
</View>
`;

exports[`Badge component Badge snapshot test should render correctly passing text 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "alignSelf": "center",
        "borderRadius": 50,
        "height": 24,
        "justifyContent": "center",
        "minWidth": 24,
        "paddingHorizontal": 8,
      },
      Object {
        "backgroundColor": "#E7ECEF",
      },
      undefined,
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#04142F",
          "fontFamily": "Roboto-Medium",
          "fontSize": 14,
          "letterSpacing": 0.16,
          "lineHeight": 22,
        },
        Object {
          "color": "#8A94A6",
        },
        undefined,
      ]
    }
  >
    2
  </Text>
</View>
`;
